stop background from moving on mobile

--- a/main.css
+++ b/main.css
@@ -153,6 +153,16 @@ strong {
 }
 
 @media only screen and (max-aspect-ratio: 5/6) {
+    #background {
+        display: none;
+    }
+
+    body {
+        background-image: conic-gradient(at 5% 5%, transparent 75%, #cba6f7 0),conic-gradient(at 5% 5%, transparent 75%, #cba6f7 0);
+        background-position: 0 0, 50px 50px;
+        background-size: 100px 100px;
+    }
+
     #flex {
         flex-wrap: wrap;
         min-height: 70vh;
